--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <div class = "overall" id="overall">overall</div>
+    <div class = "overall" id="overall"></div>
 
     <script src="javascript.js" defer></script>
 </body>
