Added reset, sketch interface with working black background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     
 </head>
 <body>
+    <div class = "Etch">Etch-a-Sketch!
+    <p>By Andreas Hochmuth</p>
+    </div>
     <div class = "overall" id="overall"></div>
+
+    <button type="button" id="reset" class="reset">Reset!</button>
+
 
     <script src="javascript.js" defer></script>
 </body>
